# orangebacon.github.io

./: .gitignore  Cargo.toml  LICENSE  deploy.sh  index.html
assets/: script.js  style.css
docs/: index.html
docs/assets/: script.js  style.css
docs/posts/: 2026-03-23-welcome.html  2026-03-24-static-site.html  2026-04-09-ai.html  2026-04-16-wfh.html  2026-04-21-programming-languages.html
posts/: 2026-03-23-welcome.html  2026-03-23-welcome.md  2026-03-24-static-site.html  2026-03-24-static-site.md  2026-04-09-ai.html  2026-04-09-ai.md  2026-04-16-wfh.html  2026-04-16-wfh.md  2026-04-21-programming-languages.html  2026-04-21-programming-languages.md  2026-04-29-git-worktree.html  2026-04-29-git-worktree.md  2026-05-13-language-design.html  2026-05-13-language-design.md  2026-05-26-parser.html  2026-05-26-parser.md  2026-06-16-progress.html  2026-06-16-progress.md  2026-07-01-nostalgia.html  2026-07-01-nostalgia.md
root/: index.html  index.html.jinja
src/: file.rs  highlight.rs  main.rs  markdown.rs  output_template.rs  plain_text.rs  template.rs
templates/: main.html  post.html
