[package]
name = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
minijinja = "2.18.0"
pulldown-cmark = "0.13.3"
pulldown-cmark-escape = "0.11.0"
pikchr = "0.1.4"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-zig = "1.1.2"
tree-sitter-c-sharp = "0.23.5"
regex = "1.12.3"
